more basic AI stuff

--- a/ml/0_basic_tree_searches.ipynb
+++ b/ml/0_basic_tree_searches.ipynb
@@ -10,8 +10,130 @@
     "# Adversarial games\n",
     "# MCTS\n",
     "# MINIMAX - only works if the best strategy does not depend on other - and if it is pure strategy\n",
-    "# ALPHA BETA PRUNING"
+    "# ALPHA BETA PRUNING\n",
+    "# Abstraction in game trees to limit search (ex: instead of looking for all cards, just see if lower or higher)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "# Types of search\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "### Unstructured search\n",
+    "\n",
+    "* no use of representation of inside the node\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Structured search\n",
+    "\n",
+    "* use the structure to better search"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "# Tree search\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "### DFS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "### BFS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "# Cutting nodes through heuristics\n",
+    "---\n",
+    "\n",
+    "* back-tracking\n",
+    "* orienting search: $A^*$\n",
+    "* evaluation functions to cut branches\n",
+    "* abstraction in game trees: for instance, do not explore all cards, just lower or higher"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "# Adversarial games\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "### Minimax\n",
+    "\n",
+    "Only works if the hypothesis that the other will play its best move is true.\n",
+    "\n",
+    "When does that happen?\n",
+    "\n",
+    "* When not dependency to what the other does?\n",
+    "* When the utility is shared between all agents?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "### Alpha-Beta"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "### MCTS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
