--- a/ml/7_neural_networks.ipynb
+++ b/ml/7_neural_networks.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "<br>\n",
     "\n",
-    "### Limitations of manually selected basis functions\n",
+    "### Motivation: limitations of manually selected basis functions\n",
     "\n",
     "A lot of Machine Learning techniques (such as linear regression, support vector machines, etc.) are based on linear separation. To deal with non-linearly separable inputs, we need to transform each input $x$ into $\\phi(x) = (\\phi_1(x) \\dots \\phi_n(x))$, to make our inputs linearly separable again. The $\\phi_i(x)$ are a fixed set of **basis functions** in this new space.\n",
     "\n",
@@ -48,18 +48,6 @@
     "\n",
     "<br>\n",
     "\n",
-    "### Deep Neural Networks\n",
-    "\n",
-    "In theory, there is no specific need for Deep Learning to prefer any form of specific functions $f_1 \\dots f_n$ to compose together to form the pipeline we described above. In practice though, we have to make compromise in order to make the learning of the parameters $\\theta_1 \\dots \\theta_n$ possible.\n",
-    "\n",
-    "First, we have to find a way to learn these parameters. The typical approach in Deep Learning is gradient descent: each function must be differentiable in its input and parameters, to allow the parameters to be tuned to minimize a **loss function** which represents our objective (what we want to minimize, for instance the distance between our prediction and the actual results).\n",
-    "\n",
-    "Second, we want to make this learning as efficient as possible. In that regards, linear functions separated by non-linearity are both easier to optimize and faster to optimize than arbitrary functions. This is why Deep Learning has focused on Linear layers separated by sigmoids, rectified linear units, or similar simple non-linear functions.\n",
-    "\n",
-    "It is worth noticing though that Deep Learning is more and more using functions that would not fall into the typical \"neural network\" category: a CNN is not exactly following the perceptron model.\n",
-    "\n",
-    "<br>\n",
-    "\n",
     "### Why not learn one big function instead?\n",
     "\n",
     "This can actually be done. One theorem stipulates that we can approximate any function with just a two layer neural network, but there are many practical and theoretical advantages in learning a combinations of small functions rather than a big function.\n",
@@ -80,12 +68,7 @@
     "# Back propagation\n",
     "---\n",
     "\n",
-    "As mentioned before, the typical way to train a Deep Learning model is to use gradient descent: inputs are fed into the model, and the output is compared to the expected value. The differences in expectations are summed together to form an error, and the parameters of the model are adjusted to minimize the error:\n",
-    "\n",
-    "&emsp; $\\displaystyle \\theta_i \\leftarrow \\theta_i - \\alpha \\, \\frac{\\partial e}{\\partial \\theta_i}$\n",
-    "&emsp; where $e$ is the error\n",
-    "\n",
-    "We call the computation of the loss the **forward pass**. If we consider a chain of functions 3 layers deep $(f_1, f_2, f_3)$ with respective parameters $(\\theta_1, \\theta_2, \\theta_3)$ followed by a loss function, this is what it looks like:\n",
+    "The typical way to train a Deep Learning model is to use gradient descent. Inputs are fed into the model (the pipeline of function which must all be differentiable) and the outputs are compared to the expected values via a **loss function** (which represents our objective) that we want to minimize, giving us an error. We call the computation of the loss the **forward pass**:\n",
     "\n",
     "&emsp; $x$\n",
     "&emsp; $\\mapsto$\n",
@@ -97,7 +80,12 @@
     "&emsp; $\\mapsto$\n",
     "&emsp; $e = loss(h_3)$\n",
     "\n",
-    "Now, we have to compute the partial derivative of the loss with respect all parameters:\n",
+    "We then tune the parameters of our model using gradient descent:\n",
+    "\n",
+    "&emsp; $\\displaystyle \\theta_i \\leftarrow \\theta_i - \\alpha \\, \\frac{\\partial e}{\\partial \\theta_i}$\n",
+    "&emsp; where $e$ is the error\n",
+    "\n",
+    "To do so, we have to compute the partial derivative of the loss with respect all parameters:\n",
     "\n",
     "&emsp; $\\displaystyle \\frac{\\partial e}{\\partial \\theta_3} = \\frac{\\partial e}{\\partial h_3} \\times \\frac{\\partial h_3}{\\partial \\theta_3}$\n",
     "\n",
@@ -107,13 +95,7 @@
     "\n",
     "We can see that the prefix of the derivative match up, and so the most efficient way to compute the derivatives is by doing a **backward** pass, going the other way that the forward pass (starting with the higher layers), and memoizing the results for the next set of parameter gradients to be efficiently computed.\n",
     "\n",
-    "<br>\n",
-    "\n",
-    "### Multiple parameters\n",
-    "\n",
-    "The notations used above are the ones of partial derivatives. They are typically used when the parameters $\\theta_i$ are single variable (not vectors) and when the outputs of each function $f_i$ are reals. The algorithm however still works with higher dimensional outputs, we just need to use Gradients and Jacobians instead of partial derivatives notations.\n",
-    "\n",
-    "Instead of the partial derivative of the loss with respect to the parameter $\\theta_i$, we use the gradient of the loss with respect to $\\theta_i$, which is the collection of all the partial derivatives. Instead of the intermediary partial derivatives, we use Jacobian matrices (where each row is a gradient of one output dimension):\n",
+    "**Note**: The notations used above are the ones of partial derivatives. They are typically used when the parameters $\\theta_i$ are single variable (not vectors) and when the outputs of each function $f_i$ are reals. The algorithm however still works with higher dimensional outputs, we just need to use Gradients and Jacobians instead of partial derivatives notations:\n",
     "\n",
     "&emsp; $\\displaystyle \\frac{\\partial e}{\\partial \\theta_i} \\in \\mathbb{R}^N$\n",
     "&emsp; becomes\n",
@@ -126,6 +108,76 @@
     "&emsp; $\\displaystyle J_{f_n}$\n",
     "\n",
     "These notations however only serve to clutter the logic above. It is easier to consider the partial derivatives as behing potentially vectors or even matrices when it needs to be."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "# Deep Neural Networks\n",
+    "---\n",
+    "\n",
+    "In theory, there is no specific need for Deep Learning to prefer any specific form of functions $f_1 \\dots f_n$ to compose together in a pipeline. In practice though, parameterizerd linear functions separated by simple non-linearities makes the learning of the parameters $\\theta_1 \\dots \\theta_n$ easier and more efficient.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Partial derivatives of matrices\n",
+    "\n",
+    "If we write the partial derivative of a multi-layer perceptron, we see that they are basically matrix products, which can be as easily parallelized on GPU in the backward pass than the forward pass:\n",
+    "\n",
+    "&emsp; $\\displaystyle y = A x \\implies \\frac{\\partial y}{\\partial x} = A \\;\\; \\text{and} \\;\\; \\frac{\\partial y}{\\partial A} = \\begin{pmatrix} x^T \\\\ \\vdots \\\\ x^T \\end{pmatrix}$\n",
+    "&emsp; because each output dimension of A is of the form $row^T x$\n",
+    "\n",
+    "To see how to handle the point-wise (dimension-wise) non-linearity such as sigmoids, let us look at a simple **logistic regression** pipeline, where $x \\in \\mathbb{R}^2$ and $y \\in \\mathbb{R}^2$:\n",
+    "\n",
+    "&emsp; $z = \\sigma(y) = \\begin{pmatrix} \\sigma(y_1) \\\\ \\sigma(y_2) \\end{pmatrix} \\;\\; \\text{with} \\;\\; y = A x \\;\\; \\text{and} \\;\\; A=\\begin{pmatrix} a & b \\\\ c & d \\end{pmatrix}$\n",
+    "\n",
+    "The partial derivative of $z$ with respect to $y$ is a Jacobian (because $z$ and $y$ both have two dimensions):\n",
+    "\n",
+    "&emsp; $\\displaystyle \\frac{\\partial z}{\\partial y} = J_z(y) = \\begin{pmatrix} \\nabla_y \\sigma(y_1)^T \\\\ \\nabla_y \\sigma(y_2)^T \\end{pmatrix} = \\begin{pmatrix} \\sigma'(y_1) & 0 \\\\ 0 & \\sigma'(y_2) \\end{pmatrix}$\n",
+    "\n",
+    "So all of our linear layer and point-wise operations can be implemented by matrices multiplications, some of which (for non-linearity) can be implemented by diagonal matrices multiplication (which is super fast).\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Efficient Back Propagation\n",
+    "\n",
+    "We can now apply these partial derivative to a deep learning pipeline of computation to see how efficiently we can compute the gradients necessary for gradient descent:\n",
+    "\n",
+    "&emsp; $x$\n",
+    "&emsp; $\\mapsto$\n",
+    "&emsp; $h_1 = A_1 x$\n",
+    "&emsp; $\\mapsto$\n",
+    "&emsp; $h_2 = \\sigma(h_1)$\n",
+    "&emsp; $\\mapsto$\n",
+    "&emsp; $h_3 = A_2 h_2$\n",
+    "&emsp; $\\mapsto$\n",
+    "&emsp; $e = loss(h_3)$\n",
+    "\n",
+    "The equation of back-propagation becomes:\n",
+    "\n",
+    "&emsp; $\\displaystyle \\frac{\\partial e}{\\partial A_2} = \\frac{\\partial e}{\\partial h_3} \\times \\frac{\\partial h_3}{\\partial A_2} = \\frac{\\partial e}{\\partial h_3} \\times \\begin{pmatrix} h_2^T \\\\ \\vdots \\\\ h_2^T \\end{pmatrix}$\n",
+    "\n",
+    "&emsp; $\\displaystyle \\frac{\\partial e}{\\partial A_1} = \\frac{\\partial e}{\\partial h_3} \\times \\frac{\\partial h_3}{\\partial h_2} \\times \\frac{\\partial h_2}{\\partial h_1} \\times \\frac{\\partial h_1}{\\partial A_1} = \\frac{\\partial e}{\\partial h_3} \\times A_2 \\times \\begin{pmatrix} \\sigma'(h_{11}) & \\cdots & 0 \\\\ \\vdots & & \\vdots \\\\ 0 & \\cdots & \\sigma'(h_{1n}) \\end{pmatrix} \\times \\begin{pmatrix} x^T \\\\ \\vdots \\\\ x^T \\end{pmatrix}$\n",
+    "\n",
+    "All of these operations can be performed at a high throughput on modern CPU and GPU. This is why Deep Learning has focused on Linear layers separated by sigmoids, rectified linear units, or similar simple non-linear functions.\n",
+    "\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Good generalization and expressivity\n",
+    "\n",
+    "These focus on linear units could have come at a price of expressivity, but this is not the case, quite the contrary. It has been shown that 2 linear layers with a sigmoid non-linearity in between is enough to approximate any function. Deeper network can achieve the same with even better generalization.\n",
+    "\n",
+    "Linear layers are also known for their good generalization. They are simple and therefore follow Occam's razor. When they work on training data (when the explanation of the training data is a linear model), they empirically also generalize well on unseen data.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Toward different architectures\n",
+    "\n",
+    "It is worth noticing that Deep Learning is more and more using functions and architectures that would not fall into the multi-layer perceptron category: lots of architectures are not linear layers separated by sigmoids or rectified linear units. For instances, a CNN uses convolutions (see paragraphs below)."
    ]
   },
   {
@@ -212,7 +264,54 @@
     "# Parameters sharing\n",
     "---\n",
     "\n",
-    "* todo: and explain CNN and the implementation with gradient"
+    "Deep Learning is about training together a chain of simple functions to adjust their parameter conjointly, so that the overall composition of these simple function approximate and generalize an unknown function from data.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Limiting the hypothesis space\n",
+    "\n",
+    "The shape of the chain of functions to learn defines the shape of the overall search space we are looking into. This search space is called the **hypothesis space**. The larger the hypothesis space, the more powerful it is (it can model more function), but the harder it is to search.\n",
+    "\n",
+    "If we have a good idea of the kind of functions we are looking for, we can restrict the hypothesis space to the relevant parts, getting the best of both worlds. This can be accomplished in many ways:\n",
+    "\n",
+    "1. focus the learning on some specific part and hardcode the rest\n",
+    "2. select the appropriate depth for the network\n",
+    "3. pick some specific function forms at some depth\n",
+    "4. share some parameters between functions or tasks\n",
+    "\n",
+    "In particular, the first point is one of the important design decision: **what do we want to approximate?** For instance, in the game of Chess, we could learn the value of a board and let the rest to a minimax algorithm. Or we could learn how to select the next move, and give it to a rollout policy for MCTS. Or we could put everything into the neural network and let it play.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Encoding our believes through invariance\n",
+    "\n",
+    "One of the major way to facilite learning is to share parameters. We can share the parameters between different tasks. For instance, in a deep neural network used for regression, the lower layer are shared between the output dimensions, and so their **weights are tuned to answer multiple tasks**. This encodes our belief that these tasks have some lower representation in common.\n",
+    "\n",
+    "Another way to share parameters, as used in recurrent network or convolutional neural nets, is to force the same weights used for different parts of a sequence, or different part of an image, to be the same. This encodes our belief that the lower level of our model should be **invariant to the position in the sequence or the image**.\n",
+    "\n",
+    "It turns out that encoding our belief rather than letting our model explore an unconstraint territory helps a lot:\n",
+    "\n",
+    "1. restricting the hypothesis space helps with the stability of learning\n",
+    "2. sharing parameters makes the parameters learn more generic representations (more profound)\n",
+    "3. sharing parameters increases the statistical strength of these parameters (and helps generalizing)\n",
+    "\n",
+    "In particular for point 3, learning a convolution that will detect the edges of an image, applied generically at each position of the image, means that the parameters of the convolutions will have been trained on much more than $N$ images, but instead on $N \\times H \\times W$ images, where $W$ and $H$ refer to the width and height of each image.\n",
+    "\n",
+    "In addition to this, what has been learn on the center of the image, will apply the same on the top left corner of the image. The knowledge is generalized and most importantly, we do not need to multiply the data points to make sure that edge detection works everywhere in the image."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "# Convolutional networks\n",
+    "---\n",
+    "\n",
+    "* what is convolution?\n",
+    "* how it works\n",
+    "* what kind of invariance it enforces"
    ]
   },
   {
@@ -266,6 +365,13 @@
     "\n",
     "We see that the $n^{th}$ value of $h$ is function of $W_{22}^n$ with respect to $h_0$. $W_{22}$ can be diagonalized into $W_{22} = V \\Lambda V^{-1}$ since it is squared, and so $W_{22}^n = V \\Lambda^n V^{-1}$ and so the eigen values will either explode or vanish."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
