--- a/ml/0_basic_inference.ipynb
+++ b/ml/0_basic_inference.ipynb
@@ -176,6 +176,27 @@
    "source": [
     "<br>\n",
     "\n",
+    "# Summary: Bayesian vs Frequentist statistics\n",
+    "---\n",
+    "\n",
+    "The ML and MAP approaches are tools of the **frequentist view** of statistics, while averaging over possible parameter values of a model is part of the **bayesian view** of statistics. These are approaches are **dual** much like the duality wave-particule for light, and lead to different results.\n",
+    "\n",
+    "To best understand the difference in philosophy between these approaches, it is important to realize that every model is a function of two arguments, data and parameters: $\\mathcal{M}(X,\\theta)$, both of which are random in a certain sense, but:\n",
+    "\n",
+    "* The **frequentist view** focuses on the **data as the random part** and averages over the data\n",
+    "* The **bayesian view** focuses on the **parameters as the random part** and averages over the parameters\n",
+    "\n",
+    "The **frequentist view** will push toward models that **infer results conditioned on parameters**: $X$ is summarized as $\\theta$ and $\\mathcal{M}(X,\\theta)$ become $p(t|x,\\theta)$. Similarly, the frequentist view will talk about uncertainty with respect to the data: the *p-value* for instance is a tool to measure how randomly generated data would be correctly treated by our model. \n",
+    "\n",
+    "The **bayesian view** will push toward models that **infer results conditions on observations**: $\\theta$ is averaged over and $\\mathcal{M}(X,\\theta)$ become $p(t|x,X)$. Similarly, the bayesian view will talk about uncertainty with respect to the parameters: how likely is the parameter to fall in that range, given a prior on the parameters value."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
     "# Example 1: online reviews\n",
     "---\n",
     "\n",
