--- a/ml/7_neural_networks.ipynb
+++ b/ml/7_neural_networks.ipynb
@@ -2,14 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# structure of ANN\n",
-    "# equations for back-prop\n",
-    "# typical error functions (cross entropy, MSE loss)\n",
-    "# why optim in high dimension works"
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -309,9 +307,78 @@
     "# Convolutional networks\n",
     "---\n",
     "\n",
-    "* what is convolution?\n",
-    "* how it works\n",
-    "* what kind of invariance it enforces"
+    "<br>\n",
+    "\n",
+    "### What is a convolution?\n",
+    "\n",
+    "In mathematics, the convolution operation is $(f * g)(t) = \\int f(\\tau) g(t-\\tau) d\\tau$. This operation happens quite offen in probabilities, when we want to find out the *reverse* probability of an output which is the sum of two random variables of known distributions $f$ and $g$. The alternative is to sample $f$ and $g$ and count the number of occurrences of $t$, but this is often impractical.\n",
+    "\n",
+    "In Neural Networks, the convolution is slightly different but related. We define a matrix of convolution $C_{ij}$ that is supperposed at each position with the input matrix $A_{mn}$, we then multiply the values that are on top of each other and sum the whole:\n",
+    "\n",
+    "* For 2D inputs: &emsp; $\\displaystyle (C * A)_{mn} = \\sum_{i,j} C_{ij} A_{m+i,n+j}$\n",
+    "* For 1D inputs: &emsp; $\\displaystyle (C * A)_{m} = \\sum_{i} C_{i} A_{m+i}$\n",
+    "\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Hypothesis set & Invariance\n",
+    "\n",
+    "Convolutional layers combines two ideas when compared to fully connected layers (Linear Layers):\n",
+    "\n",
+    "* Interactions should be local: the matrix $C$ limits the interactions of $A$ cells if too far from each other\n",
+    "* The transformation should be invariant to translation: each location is transformed the same\n",
+    "\n",
+    "A linear layer (matrix multiplication) is therefore strictly more powerful than convolution. Convolution forces the matrix to have zero values, and forces the matrix to share the same weights."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "### Equivalent matrix\n",
+    "\n",
+    "We will now focus on 1D convolutions because 2D convolutions can be casted as 1D convolutions by rearranging the inputs:\n",
+    "\n",
+    "&emsp; $y = C * x$\n",
+    "&emsp; with\n",
+    "&emsp; $C = (c_1 \\; c_2 \\; c_3)$\n",
+    "&emsp; $x = (x_1 \\; x_2 \\; x_3 \\; x_4)^T$\n",
+    "&emsp; $y = (y_1 \\; y_2)^T$\n",
+    "\n",
+    "The definition of the convolution implies that:\n",
+    "\n",
+    "&emsp; $y_1 = c_1 x_1 + c_2 x_2 + c_3 x_3$\n",
+    "&emsp; and\n",
+    "&emsp; $y_2 = c_1 x_2 + c_2 x_3 + c_3 x_4$\n",
+    "\n",
+    "Which can be represented as a matrix:\n",
+    "\n",
+    "&emsp; $y = M x$\n",
+    "&emsp; where $M = \\begin{pmatrix} c_1 & c_2 & c_3 & 0 \\\\ 0 & c_1 & c_2 & c_3 \\end{pmatrix}$\n",
+    "\n",
+    "We see here the parameter sharing. The convolutional form is however more efficient in terms of memory representation, and is also more adaptive: **convolutions work for any input sizes**.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Back-propagation\n",
+    "\n",
+    "If we take back our previous example for 1D convolution:\n",
+    "\n",
+    "&emsp; $y = C * x$\n",
+    "&emsp; with\n",
+    "&emsp; $C = (c_1 \\; c_2 \\; c_3)$\n",
+    "&emsp; $x = (x_1 \\; x_2 \\; x_3 \\; x_4)^T$\n",
+    "&emsp; $y = (y_1 \\; y_2)^T$\n",
+    "\n",
+    "We can easily and efficiently compute the derivatives:\n",
+    "\n",
+    "&emsp; $\\displaystyle \\frac{\\partial y}{\\partial x} = \\begin{pmatrix} c_1 & c_2 & c_3 & 0 \\\\ 0 & c_1 & c_2 & c_3 \\end{pmatrix}$\n",
+    "&emsp; and\n",
+    "&emsp; $\\displaystyle \\frac{\\partial y}{\\partial C} = \\begin{pmatrix} x_1 & x_2 & x_3 \\\\ x_2 & x_3 & x_4 \\end{pmatrix}$\n",
+    "\n",
+    "These partial derivatives can be plugged back in the back-propagation equations of the previous paragraphs: once again, we see that the derivatives of all parameters of the pipeline can be computed quite efficiently."
    ]
   },
   {
@@ -365,13 +432,6 @@
     "\n",
     "We see that the $n^{th}$ value of $h$ is function of $W_{22}^n$ with respect to $h_0$. $W_{22}$ can be diagonalized into $W_{22} = V \\Lambda V^{-1}$ since it is squared, and so $W_{22}^n = V \\Lambda^n V^{-1}$ and so the eigen values will either explode or vanish."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
